--- a/src/styles/components/_LandingPage.scss
+++ b/src/styles/components/_LandingPage.scss
@@ -174,18 +174,18 @@
         }
     }
     .contact {
-        background-color: #495867;
+        background-color: #2a2d31;
         h4 {
             margin-bottom: 1rem;
         }
         .contact-card {
-            border: 1px solid orange;
             width: 75%;
             margin: 0 auto;
             display: flex;
+            margin-top: 2rem;
             .contact-email {
                 width: 60%;
-                border: 1px solid blue;
+                background-color: #3B5B85;
                 padding: 2rem 1rem;
                 .form {
                     display: flex;
@@ -193,7 +193,6 @@
                     flex-wrap: wrap;
                     .form-group {
                         width: 47%;
-                        border: 1px solid orange;
                         margin-bottom: 1rem;
                         input {
                             width: 100%;
@@ -212,7 +211,8 @@
             }
             .contact-info {
                 width: 40%;
-                border: 1px solid green;
+              
+                background-color: $primary-blue;
                 padding: 2rem;
                 .contact-info-content {
                     height: 75%;
@@ -234,12 +234,18 @@
                 .contact-info-socials {
                     display: flex;
                     justify-content: center;
-                    .social-icon{
+                    .social-icon {
                         font-size: 2rem;
                         margin-right: 1rem;
                     }
                 }
             }
         }
+    }
+    footer{
+        background-color: #1e2024;
+        padding: 1.5rem;
+        color: $light;
+        text-align: center;
     }
 }
