--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -333,9 +333,21 @@ template {
       display: flex;
       align-items: center; }
       .component-landing-page .nav .nav-links .nav-link {
-        padding-right: 10%;
+        padding-right: 2rem;
         padding-top: 2%;
-        font-size: 1.1rem; }
+        font-size: 1.1rem;
+        text-align: right; }
+      .component-landing-page .nav .nav-links .nav-link:last-child {
+        width: 13rem; }
+      .component-landing-page .nav .nav-links a:link,
+      .component-landing-page .nav .nav-links a:visited {
+        color: #F9FDFF;
+        text-decoration: none;
+        padding-bottom: 8px;
+        border-bottom: transparent; }
+      .component-landing-page .nav .nav-links a:hover,
+      .component-landing-page .nav .nav-links a:active {
+        cursor: pointer; }
   .component-landing-page .header {
     background-image: linear-gradient(rgba(0, 100, 148, 0.35), rgba(0, 100, 148, 0.35)), url("../assets/images/bg-main2.jpg");
     background-size: cover;
@@ -465,6 +477,14 @@ template {
             .component-landing-page .contact .contact-card .contact-email .form .form-group:last-child textarea {
               width: 100%;
               height: 12rem; }
+        .component-landing-page .contact .contact-card .contact-email .submit-form {
+          width: 50%;
+          margin: 0 auto; }
+          .component-landing-page .contact .contact-card .contact-email .submit-form button {
+            width: 100%;
+            padding: 0.5rem;
+            border-radius: 2px;
+            border: 0; }
       .component-landing-page .contact .contact-card .contact-info {
         width: 40%;
         background-color: #009DDB;
