--- a/src/styles/components/_PropertyWizard.scss
+++ b/src/styles/components/_PropertyWizard.scss
@@ -1,9 +1,7 @@
 .component-property-wizard {
     height: 88%;
     padding: 2vh 0 3vh 0;
-    // border: 1px solid red;
      overflow-y: auto;
-    // overflow-x: hidden;
     .wizard-step-title {
         text-align: center;
         color: #fff;
@@ -20,11 +18,14 @@
             font-size: 1.25rem;
             margin-bottom: 1%;
         }
-        input {
+        input, select {
             width: 100%;
             border-radius: 5px;
             border: none;
             padding: 8px 3px;
+        }
+        select{
+           
         }
     }
     .wizard-steps {
