--- a/src/styles/components/_LandingPage.scss
+++ b/src/styles/components/_LandingPage.scss
@@ -131,6 +131,15 @@
                             width: 100%;
                         }
                     }
+                    .error-message {
+                        text-align: center;
+                        margin-top: 0.75rem;
+                        p {
+                            padding: 0.5rem;
+                            color: red;
+                            font-size: 0.8rem;
+                        }
+                    }
                 }
                 .header-form-footer {
                     text-align: center;
