--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,13 +1,10 @@
-
-
 // Colors
 $btn-blue: #0786FC;
 $btn-grey: #4D5765;
-
 $primary-blue: #009DDB;
 $light: #F9FDFF;
-
-
+$primary-red: #CB1B26;
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700');
-$font-main: 'Roboto Mono', monospace;
+$font-main: 'Roboto Mono',
+monospace;
