--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -756,11 +756,18 @@ template {
     margin: 1rem 0 0.5rem 0; }
   .component-property-wizard .input-group:nth-child(1n+2) {
     margin-top: 5%; }
+  .component-property-wizard .wizard-alert {
+    text-align: center;
+    color: #CB1B26;
+    position: relative;
+    top: 0.6rem;
+    margin-bottom: 0; }
   .component-property-wizard .input-group h6 {
     color: #fff;
     font-size: 1.25rem;
     margin-bottom: 1%; }
-  .component-property-wizard .input-group input, .component-property-wizard .input-group select {
+  .component-property-wizard .input-group input,
+  .component-property-wizard .input-group select {
     width: 100%;
     border-radius: 5px;
     border: none;
@@ -804,7 +811,9 @@ template {
       border-radius: 5px; }
       .component-property-wizard .wizard-controls button:hover {
         cursor: pointer; }
-  .component-property-wizard .step1, .component-property-wizard .step2, .component-property-wizard .step3 {
+  .component-property-wizard .step1,
+  .component-property-wizard .step2,
+  .component-property-wizard .step3 {
     width: 90%;
     margin: 0 auto; }
   .component-property-wizard .step3 p {
