--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -9,7 +9,7 @@
         align-items: center;
         padding: 0 1rem;
         justify-content: space-between;
-        .link{
+        .link {
             &:link,
             &:visited {
                 text-decoration: none;
@@ -17,9 +17,10 @@
                 font-size: 1.25rem;
                 letter-spacing: 2px;
                 color: $light;
-                transition:  all 0.5s;
+                transition: all 0.5s;
             }
-            &:hover,&:active {
+            &:hover,
+            &:active {
                 cursor: pointer;
                 color: $btn-blue;
             }
@@ -41,30 +42,40 @@
         }
     }
     .property-view {
-        height: 88.5vh;
+        height: 89vh;
         display: flex;
         color: $light;
-        .property-controls {
+        .property-view-left-column {
             width: 30%;
             height: 100%;
-            .controls-menu {
-                display: flex;
-                height: 12%;
-                .menu-tab {
-                    font-size: 1.35rem;
-                    border: 1px solid $btn-grey;
-                    height: 100%;
-                    width: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    &:hover {
-                        cursor: pointer;
+            .property-menu {
+                height: 100%;
+                .property-menu-tabs {
+                    height: 12%;
+                    .menu-tab {
+                        display: inline-block;
+                        font-size: 1.35rem;
+                        width: 50%;
+                        height: 100%;
+                        text-align: center;
+                        border: 1px solid $btn-grey;
+                        &:hover {
+                            cursor: pointer;
+                        }
+                        .menu-tab-text {
+                            display: flex;
+                            height: 100%;
+                            justify-content: center;
+                            align-items: center;
+                        }
+                    }
+                    .active {
+                        background-color: $btn-blue;
                     }
                 }
-                .active {
-                    background-color: $btn-blue;
-                }
+            }
+            .property-menu-views {
+                height: 88%;
             }
         }
         .property-list-container {
