Removed modal and placed the edit component on the side bar

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $btn-grey: #4D5765;
 $primary-blue: #009DDB;
 $light: #F9FDFF;
 $primary-red: #CB1B26;
+$blue-green: #3A87A4;
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700');
 $font-main: 'Roboto Mono',
