--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,5 @@
 @import './components/Transactions';
 @import './components/Pagination';
 @import './components/Payment';
+@import './components/EditProperty';
+@import './components/Button';
