--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -75,7 +75,7 @@
                 }
             }
             .property-menu-views {
-                height: 88%;
+                height: 85.5%;
             }
         }
         .property-list-container {
@@ -248,6 +248,10 @@
                             }
                         }
                     }
+                }
+                .property-edit-mode {
+                    background-color: $blue-green;
+                    ;
                 }
             }
         }
