--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -585,7 +585,7 @@ template {
           .component-home .property-view .property-view-left-column .property-menu .property-menu-tabs .active {
             background-color: #0786FC; }
       .component-home .property-view .property-view-left-column .property-menu-views {
-        height: 88%; }
+        height: 85.5%; }
     .component-home .property-view .property-list-container {
       width: 70%;
       height: 100%;
@@ -715,6 +715,8 @@ template {
                 font-size: 1.5rem; }
               .component-home .property-view .property-list-container .property-list .property .property-details .property-actions .action:first-child {
                 margin-bottom: 2rem; }
+        .component-home .property-view .property-list-container .property-list .property-edit-mode {
+          background-color: #3A87A4; }
 
 .component-property-search h4,
 .component-property-search h5 {
@@ -1350,3 +1352,71 @@ template {
   .payment .StripeElement.IdealBankElement,
   .payment .StripeElement.PaymentRequestButton {
     padding: 0; }
+
+.component-edit-property {
+  height: 100%;
+  overflow-y: auto; }
+  .component-edit-property .property-img {
+    height: 30%;
+    display: flex;
+    justify-content: center; }
+    .component-edit-property .property-img img {
+      height: 100%;
+      width: 100%; }
+  .component-edit-property .header {
+    background-color: #0786FC;
+    padding: 0.5rem;
+    text-align: center; }
+    .component-edit-property .header h3 {
+      font-size: 1.5rem; }
+  .component-edit-property .edit-property-form {
+    height: 100%; }
+    .component-edit-property .edit-property-form .form-group {
+      width: 100%;
+      height: 20%;
+      padding: 0.5rem;
+      display: flex;
+      flex-wrap: wrap;
+      border-bottom: 1px solid #455068;
+      border-top: 1px solid #455068; }
+      .component-edit-property .edit-property-form .form-group .group-header {
+        width: 100%;
+        height: 2.5rem;
+        padding: 0.5rem;
+        text-align: center; }
+        .component-edit-property .edit-property-form .form-group .group-header h5 {
+          font-size: 1.25rem; }
+      .component-edit-property .edit-property-form .form-group .input-group {
+        width: 45%;
+        margin-top: 0.75rem; }
+        .component-edit-property .edit-property-form .form-group .input-group input {
+          width: 100%;
+          margin-top: 0.25rem;
+          border-radius: 2px;
+          border: none;
+          padding: 6px 3px;
+          background-color: transparent;
+          border: 1px solid #0786FC; }
+        .component-edit-property .edit-property-form .form-group .input-group label {
+          font-size: 1.15rem; }
+      .component-edit-property .edit-property-form .form-group:first-child, .component-edit-property .edit-property-form .form-group:nth-child(3) {
+        justify-content: space-between;
+        height: 35%; }
+    .component-edit-property .edit-property-form .form-submit {
+      height: 10%;
+      width: 15rem;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+
+.btn {
+  width: 6rem;
+  height: 2rem;
+  border-radius: 2px;
+  border: none;
+  position: relative;
+  animation: all 1s; }
+  .btn:hover, .btn:active {
+    cursor: pointer;
+    top: 1px; }
