--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -5,7 +5,7 @@
         display: flex;
         height: 10.5vh;
         align-items: center;
-        border-bottom: 1px solid $btn-blue;
+        background-color: $btn-blue;
         align-items: center;
         padding: 0 1rem;
         justify-content: space-between;
@@ -48,6 +48,7 @@
         .property-view-left-column {
             width: 30%;
             height: 100%;
+            background-color: #353755;
             .property-menu {
                 height: 100%;
                 .property-menu-tabs {
