--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -532,7 +532,7 @@ template {
     display: flex;
     height: 10.5vh;
     align-items: center;
-    border-bottom: 1px solid #0786FC;
+    background-color: #0786FC;
     align-items: center;
     padding: 0 1rem;
     justify-content: space-between; }
@@ -563,7 +563,8 @@ template {
     color: #F9FDFF; }
     .component-home .property-view .property-view-left-column {
       width: 30%;
-      height: 100%; }
+      height: 100%;
+      background-color: #353755; }
       .component-home .property-view .property-view-left-column .property-menu {
         height: 100%; }
         .component-home .property-view .property-view-left-column .property-menu .property-menu-tabs {
@@ -1400,16 +1401,20 @@ template {
       .component-edit-property .edit-property-form .form-group .input-group {
         width: 45%;
         margin-top: 0.75rem; }
-        .component-edit-property .edit-property-form .form-group .input-group input {
+        .component-edit-property .edit-property-form .form-group .input-group input,
+        .component-edit-property .edit-property-form .form-group .input-group select {
           width: 100%;
           margin-top: 0.25rem;
           border-radius: 2px;
           border: none;
-          padding: 6px 3px;
+          padding: 6px 3px; }
+        .component-edit-property .edit-property-form .form-group .input-group input {
           background-color: transparent;
           border: 1px solid #0786FC; }
         .component-edit-property .edit-property-form .form-group .input-group label {
           font-size: 1.15rem; }
+        .component-edit-property .edit-property-form .form-group .input-group select {
+          display: block; }
       .component-edit-property .edit-property-form .form-group:first-child, .component-edit-property .edit-property-form .form-group:nth-child(3) {
         justify-content: space-between;
         height: 35%; }
