--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,4 @@
 @import './components/Payment';
 @import './components/EditProperty';
 @import './components/Button';
+@import './components/Updating';
