--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import './reset';
 @import './variables';
 @import './components/LandingPage';
-@import './components/Home';
+@import './components/PropertyView';
 @import './components/PropertySearch';
 @import './components/PropertyWizard';
 @import './components/WorkOrders';
