--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1131,20 +1131,19 @@ template {
             margin-right: 3%; }
         .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order {
           width: 95%;
-          height: 100%;
-          border: 1px solid orange;
+          height: 27rem;
           margin: 0 auto;
           padding-top: 1rem;
           display: flex; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container {
             height: 100%;
-            width: 40%; }
+            width: 40%;
+            background-color: #395D7C; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-address {
               display: flex;
               align-items: center;
               justify-content: center;
-              height: 15%;
-              background-color: #2E6B8D; }
+              margin: 1.5rem; }
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-address h4 {
                 font-size: 1.1rem; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-img {
@@ -1154,17 +1153,17 @@ template {
                 width: 100%; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .edit-buttons {
               display: flex;
-              background-color: #2E6B8D;
               justify-content: space-between;
               align-items: center;
               padding: 0 1rem;
-              width: 100%;
-              height: 15%; }
+              width: 100%; }
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .edit-buttons button {
                 width: 45%;
-                height: 60%; }
+                height: 60%;
+                padding: 8px 3px; }
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container {
             width: 60%;
+            height: 100%;
             border: 1px solid #4D5765; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container .form {
               padding: 2rem 1rem; }
@@ -1181,7 +1180,7 @@ template {
               .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .work-order-info-container .form textarea {
                 width: 60%;
                 border-radius: 3px;
-                height: 27vh;
+                height: 11rem;
                 padding: 1rem; }
 
 .component-transactions {
