--- a/src/styles/components/_PropertyWizard.scss
+++ b/src/styles/components/_PropertyWizard.scss
@@ -145,6 +145,31 @@
     .step5 {
         width: 90%;
         margin: 0 auto;
+        position: relative;
+        .processing-property{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            background-color: #181C1F;
+            .processing-property-text{
+                position: relative;
+                top: 20%;
+                text-align: center;
+               h3{
+                   font-size: 2rem;
+               }
+            }
+            .processing-property-loader{
+                width: 50%;
+                position: relative;
+                top: 30%;
+                left: 25%;
+                .css-fxz1ab{
+                    width: 100%;
+                }
+            }
+        }
         .property-img {
             height: 30vh;
             width: 100%;
