--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -868,7 +868,27 @@ template {
         font-size: 1.25rem; }
   .component-property-wizard .step5 {
     width: 90%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    position: relative; }
+    .component-property-wizard .step5 .processing-property {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      background-color: #181C1F; }
+      .component-property-wizard .step5 .processing-property .processing-property-text {
+        position: relative;
+        top: 20%;
+        text-align: center; }
+        .component-property-wizard .step5 .processing-property .processing-property-text h3 {
+          font-size: 2rem; }
+      .component-property-wizard .step5 .processing-property .processing-property-loader {
+        width: 50%;
+        position: relative;
+        top: 30%;
+        left: 25%; }
+        .component-property-wizard .step5 .processing-property .processing-property-loader .css-fxz1ab {
+          width: 100%; }
     .component-property-wizard .step5 .property-img {
       height: 30vh;
       width: 100%;
