--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -947,6 +947,80 @@ template {
     border-left: 1px solid #4D5765;
     width: 75%;
     height: 89vh; }
+    .component-workOrders .component-views .create-work-order {
+      border: 1px solid red;
+      height: 100%; }
+      .component-workOrders .component-views .create-work-order .header {
+        text-align: center;
+        border-left: 1px solid #4D5765;
+        border-bottom: 1px solid #4D5765;
+        height: 12%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+        .component-workOrders .component-views .create-work-order .header h4 {
+          font-size: 1.5rem; }
+      .component-workOrders .component-views .create-work-order .section-container {
+        display: flex;
+        border: 1px solid blue;
+        width: 75%;
+        margin: 0 auto;
+        margin-top: 2rem;
+        height: 75%; }
+        .component-workOrders .component-views .create-work-order .section-container .property-section {
+          border: 1px solid orange;
+          width: 50%;
+          margin: 0 auto;
+          position: relative; }
+          .component-workOrders .component-views .create-work-order .section-container .property-section .property-img {
+            height: 50%;
+            width: 100%; }
+            .component-workOrders .component-views .create-work-order .section-container .property-section .property-img img {
+              height: 100%;
+              width: 100%; }
+          .component-workOrders .component-views .create-work-order .section-container .property-section .property-information {
+            height: 50%;
+            border: 1px solid orange; }
+          .component-workOrders .component-views .create-work-order .section-container .property-section .property-selector {
+            position: absolute;
+            bottom: 50%;
+            width: 50%;
+            left: 25%;
+            text-align: center;
+            padding-bottom: 1rem; }
+      .component-workOrders .component-views .create-work-order .company-section {
+        width: 50%; }
+        .component-workOrders .component-views .create-work-order .company-section .company-info {
+          border: 1px solid #e9e96a;
+          width: 100%;
+          height: 50%;
+          border: 1px solid red;
+          padding: 1.5rem 4rem; }
+          .component-workOrders .component-views .create-work-order .company-section .company-info .input-group {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            margin-top: 1rem; }
+            .component-workOrders .component-views .create-work-order .company-section .company-info .input-group h6 {
+              font-size: 1rem;
+              width: 15%; }
+            .component-workOrders .component-views .create-work-order .company-section .company-info .input-group input {
+              width: 85%;
+              border: none;
+              background-color: transparent;
+              border-bottom: 1px solid green;
+              padding: 3px 8px; }
+            .component-workOrders .component-views .create-work-order .company-section .company-info .input-group input:focus {
+              outline: none; }
+          .component-workOrders .component-views .create-work-order .company-section .company-info h5 {
+            font-size: 1.25rem;
+            text-align: center; }
+        .component-workOrders .component-views .create-work-order .company-section .work-description {
+          height: 50%;
+          padding: 1.5rem 4rem; }
+          .component-workOrders .component-views .create-work-order .company-section .work-description h5 {
+            text-align: center;
+            font-size: 1.25rem; }
     .component-workOrders .component-views .add-job {
       height: 100%; }
       .component-workOrders .component-views .add-job .job-order-form {
@@ -1057,9 +1131,9 @@ template {
             .component-workOrders .component-views .job-queue .job-queue-container .job .job-controls .action:hover {
               cursor: pointer; }
             .component-workOrders .component-views .job-queue .job-queue-container .job .job-controls .action:first-child i:hover {
-              color: #FFCF40; }
+              color: #ffcf40; }
             .component-workOrders .component-views .job-queue .job-queue-container .job .job-controls .action:last-child i:hover {
-              color: #4CD765; }
+              color: #4cd765; }
     .component-workOrders .component-views .completed-jobs {
       height: 100%; }
       .component-workOrders .component-views .completed-jobs .job-header {
@@ -1146,7 +1220,7 @@ template {
                   margin: 0 auto;
                   padding: 5px 0;
                   justify-content: space-between; }
-          .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order:nth-child(3n+2) {
+          .component-workOrders .component-views .completed-jobs .completed-jobs-container .work-order-list .work-order:nth-child(3n + 2) {
             margin-left: 3%;
             margin-right: 3%; }
         .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order {
@@ -1158,7 +1232,7 @@ template {
           .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container {
             height: 100%;
             width: 40%;
-            background-color: #395D7C; }
+            background-color: #395d7c; }
             .component-workOrders .component-views .completed-jobs .completed-jobs-container .edit-work-order .property-info-container .property-address {
               display: flex;
               align-items: center;
