--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -154,7 +154,8 @@
                 width: 85%;
                 border: none;
                 background-color: transparent;
-                border-bottom: 1px solid green;
+                border-bottom: 1px solid #171717;
+                color: #fff;
                 padding: 3px 0;
               }
               input:focus {
