--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -150,12 +150,13 @@
                 font-size: 1rem;
                 width: 15%;
               }
-              input {
+              input,
+              .selectState {
                 width: 85%;
                 border: none;
                 background-color: transparent;
-                border-bottom: 1px solid #171717;
-                color: #fff;
+                border-bottom: 1px solid #232528;
+                color: #aaacac;
                 padding: 3px 0;
               }
               input:focus {
